--- a/style.css
+++ b/style.css
@@ -1546,7 +1546,7 @@ main {
         height: 450px;
         max-width: 450px;
         margin: 0 auto;
-        background-image: url(../img/imagem.jpg);
+        background-image: url(imagem.jpg);
         object-fit: cover;
         background-position: center;
     }
