--- a/style.css
+++ b/style.css
@@ -58,7 +58,61 @@ img {
     display: block;
 }
 
-
+.skills{
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 1300px;
+    margin: 0 auto;
+    margin-bottom: 3%;
+    padding-right: 3%;
+    padding-left: 3%;
+}
+.skills-section-title{
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding-top: 8%;
+    padding-bottom: 5%;
+    font-size: 20px;
+    color: var(--color-main-one);
+    text-transform: uppercase;
+}
+.skills-section-title h2::after{
+    content: '';
+    display: block;
+    width: 90%;
+    height: 3px;
+    background: var(--color-main-five);
+    margin-left: 20%;
+    margin-top: 2%;
+}
+.skills-section{
+    display: flex;
+    flex-wrap: wrap;
+    max-width: 1300px;
+    margin: 0 auto;
+    margin-bottom: 3%;
+    padding-right: 3%;
+    padding-left: 3%;
+}
+.skills-list{
+    display: flex;
+    flex-direction: row;
+    flex: 1 1 300px;
+    max-width: 360px;
+    color: var(--color-main-five);
+    margin: 0 auto;
+   
+}
+.skills-list>li{
+   margin: 0 auto;
+   font-size: 20px;
+   margin-left: 2%;
+   margin-right: 2%;
+   word-spacing: normal;
+   font-weight: bold;
+}
 @keyframes loader {
     0% {
         transform: rotate(0deg);
